fix: disabled employee name text wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,7 @@ li {
 }
 
 .employee-name {
+    white-space: nowrap;
     flex-shrink: 0;
     font-weight: 500;
 }
